# PyClear

./: Makefile  README.md  build.sh  main.py  pyclear.spec  pyproject.toml  styles.tcss
src/: constants.py  utils.py
src/removal_strategies/: removal_factory.py  removal_strategy.py  remover.py
