[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclear"
version = "1.0.0"
description = "Python __pycache__ cleaner tool"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyinstaller>=5.13.2",
    "rich",
]

[project.scripts]
pyclear = "main:main"
